syntax = "proto3";

package maple2;

message ChatRequest {
  message Whisper {
    int64 recipient_id = 1;
    string recipient_name = 2;
  }
  message Party {
    int32 party_id = 1;
  }
  message Guild {
    int64 guild_id = 1;
  }
  message World {
  }
  message Super {
    int32 item_id = 1;
  }
  message Club {
    int64 club_id = 1;
  }
  message Wedding {
    int32 item_id = 1;
  }

  int64 account_id = 1;
  int64 character_id = 2;
  string name = 3;
  string message = 4;

  oneof chat {
    Whisper whisper = 5;
    Party party = 7;
    Guild guild = 8;
    World world = 11;
    Super super = 16;
    Club club = 20;
    Wedding wedding = 25;
  }
}

message ChatResponse {
}

message BuddyRequest {
  message Invite {
    int64 sender_id = 1;
  }
  message Accept {
    int64 entry_id = 1;
  }
  message Decline {
    int64 entry_id = 1;
  }
  message Block {
    int64 sender_id = 1;
  }
  message Delete {
    int64 entry_id = 1;
  }
  message Cancel {
    int64 entry_id = 1;
  }

  int64 receiver_id = 1;

  oneof buddy {
    Invite invite = 2;
    Accept accept = 3;
    Decline decline = 4;
    Block block = 5;
    Delete delete = 7;
    Cancel cancel = 17;
  }
}

message BuddyResponse {
  int32 channel = 1;
}
